Misc style updates
- Updated the application button SCSS a bit
- Added light/dark versions of the `.text-[color]` classes
- Updated CSS classes for small/tiny text

--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -48,6 +48,14 @@
   .text-#{$name} {
     color: $color !important;
   }
+
+  .text-#{$name}-dark {
+    color: dark($color) !important;
+  }
+
+  .text-#{$name}-light {
+    color: light($color) !important;
+  }
 }
 
 // TODO standardize gradient code
