Added .selectList-memberDetails.member-role css class

--- a/scss/elements/_select_list.scss
+++ b/scss/elements/_select_list.scss
@@ -304,6 +304,11 @@ ul.selectList {
   }
   .selectList-memberDetails {
     width: 35em;
+
+    .member-role {
+	color: $charcoal;
+	font-weight: bold;
+    }
   }
 
   .selectList-itemActions {
