--- a/scss/application/global/_grid.scss
+++ b/scss/application/global/_grid.scss
@@ -11,10 +11,12 @@ $outer-margin: 2rem !default;
 // Create or remove breakpoints for your project
 // Syntax:
 // name SIZErem,
-$breakpoints:
-  sm 768px 750px,
-  md 992px 970px,
-  lg 1430px 1400px;
+//
+// TODO: refactor code to use the $breakpoints variable
+$breakpoints_legacy:
+  sm map-get($breakpoints, tablet) $container-sm,
+  md map-get($breakpoints, laptop) $container-md,
+  lg map-get($breakpoints, desktop) $container-lg;
 
 $flexboxgrid-max-width: 1200px !default;
 
@@ -53,13 +55,6 @@ Grid
   box-sizing: border-box;
   max-width: $flexboxgrid-max-width;
   margin: 0 auto;
-}
-
-.container {
-  margin-right: auto;
-  margin-left: auto;
-  // padding-left: 1rem;
-  // padding-right: 1rem;
 }
 
 .container-fluid {
@@ -164,14 +159,11 @@ $name: xs;
 }
 
 
-@each $breakpoint in $breakpoints {
+@each $breakpoint in $breakpoints_legacy {
   $name: nth($breakpoint, 1);
   $size: nth($breakpoint, 2);
   $container: nth($breakpoint, 3);
   @media only screen and (min-width: $size) {
-    .container {
-      width: $container;
-    }
 
     .col-#{$name} {
       @include flexboxgrid-sass-col-common;
@@ -242,9 +234,9 @@ $name: xs;
 
 
 .container-md {
-  max-width: nth(nth($breakpoints, 2), 3);
+  max-width: nth(nth($breakpoints_legacy, 2), 3);
 }
 
 .container-sm {
-  max-width: nth(nth($breakpoints, 1), 3);
+  max-width: nth(nth($breakpoints_legacy, 1), 3);
 }
