Updating icon fonts
Tried to make it so styles that use icons, refencence the underlying
.icon-* style.  That way, when we switch the icon fonts it doesn't mess
up all the other styles.

--- a/scss/application/elements/_searchbar.scss
+++ b/scss/application/elements/_searchbar.scss
@@ -12,7 +12,7 @@
   position: relative;
   &:after {
     font-family: 'amara' !important;
-    content: "\e91a";
+    @extend .icon-search:before;
     display: block;
     position: absolute;
     right: 16px;
