--- a/scss/application/global/_navs.scss
+++ b/scss/application/global/_navs.scss
@@ -28,7 +28,7 @@
         top: 50%;
         margin-top: -10px;
         font-family: 'amara';
-        content: "\e90c";
+        @extend .icon-forward:before;
         font-size: 17px;
         color: $teal;
       }
