--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -323,7 +323,7 @@ input:checked + label .checkbox-icon {
   background-color: $plum;
   &:after {
     font-family: 'amara';
-    content: "\e90a";
+    @extend .icon-check:before;
     display: block;
     position: absolute;
     height: 16px;
