Initial code for the videos/create page

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -71,3 +71,4 @@
 @import 'application/views/messaging_center';
 @import 'application/views/member_directory';
 @import 'application/views/activity_page';
+@import 'views/videos-create';
