--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -37,6 +37,11 @@ $font-size-normal: 16px;
 $font-size-small: 14px;
 $font-size-tiny: 13px;
 
+$font-size-mega: 72px;
+$font-size-jumbo: 48px;
+$font-size-h1: 36px;
+$font-size-h2: 24px;
+$font-size-h3: 20px;
 
 // Animations
 $use-fadeInUp       : true;
