Videos/create page tweaks after talking with kenzie

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -13,6 +13,7 @@
 @import 'application/utils';
 
 // Layout Elements
+@import 'layout/base';
 @import 'layout/page_header';
 @import 'layout/page_footer';
 @import 'layout/utils';
