--- a/scss/marketing.scss
+++ b/scss/marketing.scss
@@ -17,6 +17,7 @@
 @import 'base/colors';
 
 // Import layout / global styles
+@import 'layout/base';
 @import "layout/page_header";
 @import "layout/page_content";
 @import "layout/page_footer";
