--- a/scss/application/global/_buttons.scss
+++ b/scss/application/global/_buttons.scss
@@ -72,6 +72,9 @@ button {
     font-size: 13px;
     line-height: 1.5em;
   }
+  &.tall {
+    padding: 14px 30px;
+  }
   &.disabled {
     background-color: light($gray);
     border-color: light($gray);
