Changed .grid class justify-content to center (previously space-between)

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -45,7 +45,7 @@
 
 .grid {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
   .item {
