Updates for the new pricing table code
- Moved pricing-table SCSS to its own file
- Added some more functionality to the marketing JS

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -62,6 +62,7 @@
 @import "elements/alerts";
 @import 'elements/tables';
 @import 'elements/video-subtitles-list';
+@import 'elements/pricing-table';
 
 // Views
 @import 'application/views/style_guide';
