--- a/scss/marketing.scss
+++ b/scss/marketing.scss
@@ -42,6 +42,7 @@
 @import "elements/consolidate_header";
 @import "elements/language_switcher";
 @import 'elements/select';
+@import 'elements/pricing-table';
 
 // Views
 @import "views/home";
