Added font awesome to our SCSS bundle
I've noticed that some privacy blockers stop the CDN import, so let's
build it ourselves.

Added node-sass-tilde-importer and started using it to clean up our CSS
imports.

--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -1,4 +1,4 @@
-@import "../node_modules/animate-sass/animate";
+@import "~animate-sass/animate";
 
 @keyframes symbol {
     0% { transform: scale(0.6); opacity: 0; }
