--- a/scss/application.scss
+++ b/scss/application.scss
@@ -1,9 +1,10 @@
 @import 'variables';
 
 // 3rd party
-@import "../node_modules/chartist/dist/chartist";
-@import "../node_modules/select2/dist/css/select2";
-@import "../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "~chartist/dist/chartist";
+@import "~select2/dist/css/select2";
+@import "~bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "fontawesome";
 
 @import 'functions';
 @import 'mixins';
