Added underlines to links (pculture/unisubs#3235)

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -22,8 +22,8 @@ section {
 a {
   color: $teal;
   font-weight: 600;
+  text-decoration: underline;
   &:hover, &:focus {
-    text-decoration: none;
     color: $lime;
     outline: none;
     cursor: pointer;
