--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -46,6 +46,7 @@ button {
   background-color: $gray;
   color: #fff;
   @include transition(0.4s);
+  @include no-underline;
   &:focus, &:visited {
     color: #fff;
   }
