Added documentation about font awesome
pculture/unisubs#2007

--- a/scss/application/elements/_avatars.scss
+++ b/scss/application/elements/_avatars.scss
@@ -8,13 +8,13 @@
 // <ul class="inline">
 //   <li>
 //     <span class="avatar avatar-lg">
-//       <img src="https:s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/avatar-default-100.png">
+//       <img src="https://s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/avatar-default-100.png">
 //     </span><br>
 //     Default
 //   </li>
 //   <li>
 //     <span class="avatar avatar-lg">
-//      <img src="https:s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/avatar-inverse-100.png">
+//      <img src="https://s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/avatar-inverse-100.png">
 //     </span><br>
 //     Inverse
 //   </li>
@@ -48,31 +48,31 @@
 // <ul class="inline">
 //   <li>
 //     <span class="avatar avatar-lg">
-//      <img src="https:s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/avatar-team-default-100.png">
+//      <img src="https://s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/avatar-team-default-100.png">
 //     </span><br>
 //     Default
 //   </li>
 //   <li>
 //     <span class="avatar avatar-lg">
-//      <img src="https:s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/avatar-team-inverse-100.png">
+//      <img src="https://s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/avatar-team-inverse-100.png">
 //     </span><br>
 //     Inverse
 //   </li>
 //   <li>
 //     <span class="avatar avatar-lg">
-//      <img src="https:s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/avatar-team-teal-100.png">
+//      <img src="https://s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/avatar-team-teal-100.png">
 //     </span><br>
 //     Teal
 //   </li>
 //   <li>
 //     <span class="avatar avatar-lg">
-//      <img src="https:s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/avatar-team-plum-100.png">
+//      <img src="https://s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/avatar-team-plum-100.png">
 //     </span><br>
 //     Plum
 //   </li>
 //   <li>
 //     <span class="avatar avatar-lg">
-//      <img src="https:s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/avatar-team-lime-100.png">
+//      <img src="https://s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/avatar-team-lime-100.png">
 //     </span><br>
 //     Lime green
 //   </li>
