--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -5,7 +5,6 @@
 //   <li class="bg-teal">Teal</li>
 //   <li class="bg-amaranth">Amaranth</li>
 //   <li class="bg-lime">Lime</li>
-//   <li class="bg-sea-green">Sea Green</li>
 // </ul>
 // <ul class="colorGrid">
 //   <li class="bg-charcoal">Charcoal</li>
@@ -62,11 +61,13 @@
 .bg-plum.gradient {
   background-image: linear-gradient(#872648, #592746);
 }
-.bg-sea-green.gradient {
+.bg-sea-green-gradient {
   background-image: linear-gradient(#468e43, #389873);
+  color: $white;
 }
-.bg-sea-green-dark.gradient {
+.bg-sea-green-dark-gradient {
   background-image: linear-gradient(#2f8665, #0f573c);
+  color: $white;
 }
 
 .bg-overlay {
