--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -388,7 +388,7 @@ input:checked + label .checkbox-icon {
   }
 }
 
-.bg-sea-green, .bg-plum {
+.bg-teal, .bg-plum {
   .form-group.has-error {
     .helpBlock {
       background: $white;
