Adding hex values to the CSS color styleguide
pculture/unisubs#2010

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 $charcoal:               #222626;
 $gray:                   #9fa0a1;
-$snow:                   #F3F4F6;
-$white:                  #FFFFFF;
+$snow:                   #f3f4f6;
+$white:                  #ffffff;
 
 $plum:                   #5a2747;
 $teal:                   #30957b;
