--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -1,16 +1,16 @@
 // Color palette
 //
 // <ul class="colorGrid">
-//   <li class="bg-plum"><span>Plum</span></li>
-//   <li class="bg-teal">Teal</li>
-//   <li class="bg-amaranth">Amaranth</li>
-//   <li class="bg-lime">Lime</li>
+//   <li class="bg-plum"><span>Plum <br> #5a2747 </span></li>
+//   <li class="bg-teal">Teal <br> #30957b </li>
+//   <li class="bg-amaranth">Amaranth <br> #f3254d </li>
+//   <li class="bg-lime">Lime <br> #80bd3e </li>
 // </ul>
 // <ul class="colorGrid">
-//   <li class="bg-charcoal">Charcoal</li>
-//   <li class="bg-gray">Gray</li>
-//   <li class="bg-snow">Snow</li>
-//   <li class="bg-cream">Cream</li>
+//   <li class="bg-charcoal">Charcoal <br> #222626 </li>
+//   <li class="bg-gray">Gray <br> #9fa0a1 </li>
+//   <li class="bg-snow">Snow <br> #f3f4f6 </li>
+//   <li class="bg-cream">Cream <br> #fffdf8 </li>
 // </ul>
 // 
 // 
