Combined video card SCSS
pculture/unisubs#3218

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -45,7 +45,7 @@
 @import 'application/elements/avatars';
 @import 'application/elements/step_list';
 @import 'application/elements/filtered_list';
-@import 'application/elements/video_card';
+@import 'elements/video_card';
 @import 'elements/select_list';
 @import 'application/elements/subtitles';
 @import 'application/elements/subtitles_list';
