--- a/scss/application.scss
+++ b/scss/application.scss
@@ -25,7 +25,7 @@
 @import "elements/language_switcher";
 
 // Global
-@import 'application/global/base';
+@import 'base/global';
 @import 'base/typography';
 @import 'base/colors';
 @import 'application/global/grid';
@@ -75,3 +75,4 @@
 @import 'application/views/member_directory';
 @import 'application/views/activity_page';
 @import 'views/videos-create';
+@import 'views/team-members';
