--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -28,6 +28,21 @@ a {
     outline: none;
     cursor: pointer;
   }
+  &.no-underline {
+    @include no-underline;
+  }
+  &.block {
+    display: inline-block;
+  }
+  &.disabled {
+    cursor: default;
+    color: light($gray);
+    pointer-events: none;
+  }
+  &.text {
+    @include no-underline;
+    color: inherit;
+  }
 }
 
 iframe {
@@ -35,21 +50,16 @@ iframe {
 }
 
 ol, ul {
+  list-style: none;
   padding: 0;
 }
 
-
-
-// Media Queries
-
-@media(max-width: $screen-md-max) {
-
-}
-
-@media(max-width: $screen-sm-max) {
-
-}
-
-@media(max-width: $screen-xs-max) {
-
+header {
+  position: relative;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  &.borderless {
+    border-bottom: none;
+  }
+  h1, h2, h3, h4 { margin: 0; }
 }
