--- a/scss/elements/_tabs.scss
+++ b/scss/elements/_tabs.scss
@@ -86,6 +86,7 @@ ul.nav-tabs {
       margin-left: 0;
     }
     > a {
+      @include no-underline;
       padding: 10px 0;
       border: none;
       border-bottom: 2px solid transparent;
