Couple more style updates

--- a/scss/elements/_video_card.scss
+++ b/scss/elements/_video_card.scss
@@ -162,6 +162,7 @@
   &:after {
     font-family: 'amara';
     @extend .icon-forward:before;
+    @include no-underline;
     display: block;
     position: absolute;
     bottom: 10px;
