Hack to fix no underline style on Edge

--- a/scss/elements/_video_card.scss
+++ b/scss/elements/_video_card.scss
@@ -159,6 +159,7 @@
   background-color: $charcoal;
   color: #ffffff;
   text-align: left;
+  @include no-underline;
   &:after {
     font-family: 'amara';
     @extend .icon-forward:before;
