--- a/scss/elements/_video_card.scss
+++ b/scss/elements/_video_card.scss
@@ -52,7 +52,7 @@
   position: relative;
   height: auto;
   margin: 0 0 40px 0;
-  overflow: hidden;
+  //overflow: hidden;
   box-sizing: border-box;
   @extend .col-xs-12;
   @extend .col-sm-6;
