--- a/scss/layout/_utils.scss
+++ b/scss/layout/_utils.scss
@@ -20,8 +20,24 @@
 // </div>
 //
 // Styleguide blockCenter
+
+// Width 100%
+//
+// Use `.width-100` to apply 100% width to an element
+//
+// Example:
+// <div style="width:300px;border:1px solid black">
+//   <span class="width-100" style="display:inline-block;background:lime">Width 100%</span>
+// </div>
+//
+// Styleguide width100
+
 .block-center {
   display: grid;
   justify-content: center;
+}
+
+.width-100 {
+  width: 100%;
 }
 
