--- a/scss/application.scss
+++ b/scss/application.scss
@@ -64,6 +64,7 @@
 @import 'elements/tables';
 @import 'elements/video-subtitles-list';
 @import 'elements/pricing-table';
+@import 'application/elements/banner';
 
 // Views
 @import 'application/views/style_guide';
