--- a/scss/application/elements/_banner.scss
+++ b/scss/application/elements/_banner.scss
@@ -13,12 +13,15 @@
 // Styleguide actionBar
 
 .banner-container {
-  width: 100%;
-  max-height: 240px;
+  max-width: 940px;
+  max-height: 235px;
   overflow: hidden;
   text-align: center;
 
   img.banner-image {
-    display: inline-block;
+    position: relative;
+    margin-left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);  
   }
 }
