Added CSS/JS for dependent checkboxes
Also updated the regular radiobutton/checkbox styles.  Made them
slightly bigger.

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -103,6 +103,7 @@ $state-danger-border:            $amaranth;
 
 // z-index values
 $z-index-behind: -1;
+$z-index-front: 1;
 // page layer
 $z-index-menu: 20;
 $z-index-action-bar: 30;
