--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -425,7 +425,7 @@ input:checked + label .checkbox-icon {
 // Example:
 // <form>
 //   <fieldset>
-//     <legend>Personal information</legend>
+//     <legend><h3>Personal information</h3></legend>
 //     <div class="form-group">
 //       <label for="name">Name</label>
 //       <input type="text" id="name">
@@ -440,7 +440,7 @@ input:checked + label .checkbox-icon {
 //     </div>
 //   </fieldset>
 //   <fieldset>
-//     <legend>Account information</legend>
+//     <legend><h3>Account information</h3></legend>
 //     <div class="fieldsetHelpBlock">Details for your Amara acount</div>
 //     <div class="form-group">
 //       <label for="username">Username</label>
@@ -455,7 +455,7 @@ input:checked + label .checkbox-icon {
 //       <input type="text" id="password2">
 //     </div>
 //   </fieldset>
-//   <div class="form-actions">
+//   <div class="form-actions fieldset-footer">
 //     <button class="button borderless">Cancel</button>
 //     <button type="submit" class="button cta">Submit</button>
 //   </div>
@@ -464,17 +464,47 @@ input:checked + label .checkbox-icon {
 // Styleguide fieldsets
 
 fieldset {
-  padding-bottom: 20px;
+  border: solid 1px #cccccc;
+  border-top: none;
+  border-bottom: none;
+
+  legend {
+    //fix for janky positioning of <legend> tags
+    float: left;
+
+    padding-top: 15px;
+    padding-left: 20px;
+    margin-bottom: 30px;
+    height: 55px;
+    background-color: $plum;
+    border-bottom: none;
+    color: $cream;
+
+    h3 {
+      color: $cream !important;
+    }
+  }
+
+  .form-group:last-of-type {
+    margin-bottom: 45px;
+  }
 }
 
-legend {
-  margin-bottom: 12px;
-  border-bottom: 1px solid light($gray);
-  color: $charcoal;
+fieldset > :not(legend) {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.fieldset-footer {
+  border: solid 1px #cccccc;
+  border-top: none;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 10px;
 }
 
 .fieldsetHelpBlock {
-  margin-top: -8px;
+  margin-top: 0px;
   font-size: $font-size-tiny;
   color: $charcoal;
   margin-bottom: 16px;
